src/components/Slider/Slider.module.css
/* stylelint-disable selector-pseudo-class-no-unknown */
:global(.swiper).slider {
  text-align: center;
}

.image {
  padding: 50px 0;
  transition: transform .5s, opacity .5s;
}

:global(.swiper-slide) .image {
  opacity: .3;
}

.buttons {
  display: flex;
  justify-content: center;
}

.prev,
.next {
  display: inline-flex;
  width: fit-content;
  padding: 10px;
  margin: 20px;
  cursor: pointer;
  background: #ffffff;
  border: 2px solid #353432;
  border-radius: 50%;
}

.prev img,
.next img {
  display: block;
}

.prev:hover,
.next:hover,
.prev:focus,
.next:focus {
  border-color: #ae7f51;
}

.prev img {
  transform: rotate(180deg);
}

.description {
  position: absolute;
  top: 20%;
  left: -105%;
  display: none;
  max-width: 100%;
  font-size: 16px;
  font-weight: 400;
  line-height: 22px;
  color: #353432;
  text-align: left;
}

:global(.swiper-slide-active) .description {
  display: block;
}

:global(.swiper-slide-active) .image {
  opacity: 1;
  transform: scale(1.2);
}

.name {
  position: absolute;
  top: 16%;
  right: -69%;
  display: none;
  max-width: 100%;
  font-size: 24px;
  font-weight: 700;
  line-height: 33px;
  color: #000000;
}

:global(.swiper-slide-active) .name {
  display: block;
}

.socials {
  position: absolute;
  top: 30%;
  right: -110%;
  display: none;
  cursor: pointer;
}

:global(.swiper-slide-active) .socials {
  display: block;
}

.icons {
  margin: 5px;
  cursor: pointer;
  background: none;
  border: none;
  border-radius: 50%;
}

